modifique muchas cosas

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <!-- menu navegacion (desplazamiento por anclas) y enlaces -->
         <nav class="menu-navegacion">
             <a href="#inicio">Inicio</a>
+            <a href="#ubicacion">Ubicacion</a>
             <a href="#veleros">Veleros</a>
-            <a href="#cruceros">Cruceros</a>
+            <a href="#yates">Yates</a>
             <a href="#lanchas">Lanchas</a>
             <a href="#footer">Contacto</a>
         </nav>
@@ -34,7 +35,7 @@
         <!-- cabecera H1 y P -->
         <div class="contenedor head">
             <h1>Brokers Embarcaciones</h1>
-            <p>Matenimiento, venta y gestoria</p>
+            <p>Alquiler, venta y gestoria</p>
         </div>
     </header>
 
@@ -45,15 +46,15 @@
         <seccion class="contenedor" id="servicio">
 
             <!-- nombre del contenedor -->
-            <h2 class="subtitulo">Nuestro Servicio</h2>
+            <h2 class="subtitulo">Nuestros Servicios</h2>
 
             <!-- lo que contiene cada contenedor div: imagen, nombre, h3, p. -->
             <div class="contenedor-servicio">
                 <img src="img/checklist-two-color.svg" alt="">
                 <div class="checklist-servicio">
                     <div class="service">
-                        <h3 class="n-service"><span class="number">1</span>Venta</h3>
-                        <p>Nos dedicamos a la venta de vehículos diseñados para navegar en el agua, botes, veleros, yates o barcos, utilizados para diversas actividades como pesca, recreación, transporte o deportes acuáticos., que varian en tamaño, forma y propósito, ofreciendo opciones para diferentes necesidades y gustos.</p>
+                        <h3 class="n-service"><span class="number">1</span>Venta y/o Alquiler</h3>
+                        <p>Nos dedicamos a la venta y/o alquiler de vehículos diseñados para navegar en el agua, botes, veleros, yates o barcos, utilizados para diversas actividades como pesca, recreación, transporte o deportes acuáticos., que varian en tamaño, forma y propósito, ofreciendo opciones para diferentes necesidades y gustos.</p>
                     </div>
                     <div class="service"> 
                         <h3 class="n-service"><span class="number">2</span>Gestoria</h3>
@@ -89,10 +90,168 @@
             <img src="img/close.svg" alt=""class="close">
             <img src="" alt=""class="agregar-imagen">   
         </section>
-        
-        <!-- cuarta section.contenedor#expertos -->
+
+        <!-- cuarta section.veleros -->
+        <section class="contenedor" id="veleros">
+            <h2 class="subtitulo">Veleros</h2>
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Veleros1.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">1</span>Albatro 950</h3>
+                    <p>Se trata de un tipo de velero que cuenta con un único casco. De hecho, son los barcos de vela antiguos por antonomasia. Es ese modelo de embarcación que nuestra mente asocia con este tipo de barco. Presentan diseños clásicos y están marcados también por el uso de velas triangulares.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Veleros2.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">2</span>Victory 34</h3>
+                    <p>Velero que posee más de un casco., tipo catamaran, que tienen dos. De hecho, aunque no sean tan conocidos, estos son los que albergan camarotes más amplios y los que resultan más confortables para navegar.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Velero3.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">3</span>Acero Oceanico 12.60</h3>
+                    <p>Motor de hélice instalado en la parte trasera del barco, al igual que sucede en otros diferentes tipos de embarcaciones más pequeñas. Por lo general, son usados durante la mayor parte del tiempo de navegación debido, fundamentalmente, a que estos veleros emplean velas más pequeñas de lo que es habitual. Solo se utilizan cuando las condiciones de viento son las idóneas.Son bastante veloces. Ese es el motivo por el que también se cuidan mucho sus diseños, los cuales han de mantener un excelente equilibrio entre la comodidad al navegar y el rendimiento en términos de potencia y velocidad.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Velero4.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">4</span>Aloha 22</h3>
+                    <p>Diseñados para realizar travesías muy largas y durante períodos de tiempo prolongados. De hecho, sus vastas dimensiones, unidas a las excelentes comodidades que ofrecen en su interior, propician que sea ideal para pasar allí hasta una semana o 10 días. Este tipo de barcos, da prioridad al confort por encima de la velocidad. También incorporan una gran capacidad de almacenamiento para llevar provisiones. Lo más habitual es que dispongan de un motor potente. Este motor es básico para poder maniobrar al llegar a puerto y para mantener la velocidad de navegación cuando las condiciones de viento no son las idóneas.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Velero5.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">5</span>Alpha 25</h3>
+                    <p>Enfocado en exclusiva al entretenimiento de los tripulantes. Presenta un tamaño intermedio. Además, no da prioridad a la velocidad, sino al confort, por lo que no pueden usarse en regatas ni en competiciones similares. Pese a su tamaño, cuenta con instalaciones diseñadas para permitir a los usuarios disfrutar de la navegación. Albergan espacio suficiente para más de 10 personas y suele emplearse también para realizar recorridos turísticos por el litoral de islas y localidades costeras.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Veleros/Velero6.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">6</span>Aries 32</h3>
+                    <p>Su imponente tamaño implica que tenga que ser pilotado por un patrón de yate profesional, cualificado y con experiencia. Los megayates convencionales incorporan solo uno o varios motores para impulsarse sobre el agua. Sin embargo, en este caso, también cuentan con amplias velas que le permiten aprovechar el viento y ahorrar combustible. Un aspecto a considerar si atendemos al alto gasto que origina mover su peso. Está provisto de todo tipo de comodidades y lujos. De hecho, dispone de amplias áreas para tomar el sol y hacer ejercicio, de camarotes privados tanto para la tripulación como para los viajeros y de cocinas similares a las de un restaurante. En resumen, una maravilla.</p>
+                </div>
+            </article>  
+        </section>
+
+        <!-- quinta section.yates -->
+        <section class="contenedor" id="yates">
+            <h2 class="subtitulo">Yates</h2>
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate1.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">1</span>Altamar 62</h3>
+                    <p>Prima el espacio y el confort por encima de la velocidad y el rendimiento, aunque estas características a veces van de la mano. Cuenta con el máximo confort posible y ofrece amplios espacios para pernoctar a bordo. Están repletos de todas las comodidades que se puedan necesitar y su diseño es muy cuidadoso. Su casco es de planeo y está propulsado por uno o varios motores.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate2.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">2</span>Amat 40</h3>
+                    <p>Lujosa embarcación que cuenta con amplio flybridge donde vas a poder recostarte y tener las vistas panorámicas del recorrido y podrás disfrutar de un jacuzzi que se encuentra en este mismo espacio; además, cuenta con cómodas asoleadoras en proa y amplio espacio para sentarse con comedor exterior en popa con plataforma y escalera de baño; mientras que, en el interior posee una amplia sala de estar con comedor, tiene 7 habitaciones (1 habitación principal, 2 VIP, 4 Twin que tres de ellas se pueden volver doble) y baños. Adicionalmente, cuenta con buen sistema de sonido para que pongas la música que gustes. </p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate3.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">3</span>Clásico 10.40</h3>
+                    <p>Llega a los 15 metros de eslora. Ofrece mangas anchas con gran estabilidad y mucho espacio, proas elevadas que protegen de las olas profundas para suavizar los impactos y popas con buena flotabilidad para favorecer al máximo la comodidad.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate4.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">4</span>Andamar 101</h3>
+                    <p>Tipo de yate de día de estilo americano muy común. Normalmente, ofrece sofás en V en proa y amplios asientos en la bañera. Equipado con motores intrabordas potentes, aletas direccionales, lastres ajustables para controlar la estela y un amplio abanico de accesorios y detalles de personalización.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate5.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">5</span>Andamar 101</h3>
+                    <p>Esta embarcación cuenta con mucho espacio en cubierta. En la zona de proa cuenta con mallas multifilamento y asoleadoras donde puedes recostarte y broncearte; asimismo, en la zona de popa tiene lugares para sentarse; así que, puedes compartir con tus acompañantes al aire libre; mientras que, en el interior vas a encontrar una sala de estar, cocina, 5 habitaciones (4 dobles y 1 litera) y 2 baños. Adicionalmente, vas a crear recuerdos memorables con tus familiares, amigos o colegas.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Yates/Yate6.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">6</span>Antago 21</h3>
+                    <p>Esta embarcación tiene flybridge con sofá y mesa donde puedes tener vistas panorámicas de todo el recorrido; además, en la zona de proa cuenta con asoleadoras donde puedes recostarte y broncearte; asimismo, en la zona de popa cuenta con zona de asientos con mesa; mientras que, en el interior cuenta con linda y espaciosa sala de estar, comedor, 4 habitaciones (2 dobles y 2 twin)  y baño. Adicionalmente, vas a tener la oportunidad de vivir una experiencia única con tus acompañantes.</p>
+                </div>
+            </article> 
+
+        <!-- sexta section.cruceros -->
+        <section class="contenedor" id="lanchas">
+            <h2 class="subtitulo">Lanchas</h2>
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha1.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">1</span>Eclipse 17 Open</h3>
+                    <p>Espacio protegido y confortable. Este tipo de bote tiene una cama donde puedes recostarte y descansar. Incluso, sofá o asientos que se pueden convertir en camas. Está equipada con un área de preparación de alimentos. También, incluye un baño.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha2.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">2</span>Arrow 180</h3>
+                    <p>Acabados y decoraciones de alta calidad, accesorios de diseño, sistemas de entretenimiento avanzados y baño.Motores potentes, que le permite alcanzar altas velocidades y tener un excelente desempeño en el agua. Se usa principalmente para el ocio y el entretenimiento de personas que desean disfrutar de la navegación de lujo, realizar actividades como la pesca o el buceo o simplemente relajarse y disfrutar.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha3.jpeg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">3</span>Sea Ray 200 SD</h3>
+                    <p>Embarcación Sea Ray 200 SD para 8 personas con o sin patrón. Motor Mercruiser V8 Intraborda con 240CV. Longitud de 6 metros, con Proa abierta, con asientos, un solarium de popa y popa. Esta embarcación es perfecta para pasarlo en grande. Dispone de Bluetooht y radio para conectar el móvil a los altavoces.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha4.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">4</span>Bahamas 440 Fisher</h3>
+                    <p>Construida con tubos inflables en los costados y un casco rígido en la parte inferior. Esta lancha es ligera, fácil de transportar y versátil. Suele ser utilizada para actividades recreativas en aguas costeras.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha5.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">5</span>Bayliner 1850</h3>
+                    <p>Diseñada para actividades acuáticas recreativas y deportivas como esquí acuático, wakeboard, tubing y otras actividades similares. Este tipo de botes tiene un casco en forma de V profunda, está equipada con motores potentes que permiten una rápida aceleración y velocidades más altas. Un motor con buena potencia, esencial para actividades como el esquí acuático y el wakeboard, donde se requiere una gran fuerza de arrastre. Brinda un espacio adicional y escaleras plegables para facilitar la entrada y salida del agua.</p>
+                </div>
+            </article>  
+            <article class= "contenedor-servicio">
+                <img src="img/Lanchas/Lancha6.jpg" alt="">
+                <div class="checklist-servicio">
+                    <div class="service"></div>
+                    <h3 class="n-service"><span class="number">6</span>Bermuda Twenty</h3>
+                    <p>Diseñada específicamente para la pesca. Tiene una cubierta abierta para permitir el movimiento y el lanzamiento de las líneas de pesca y maniobrar alrededor del bote mientras se pesca; además, está equipada con características y accesorios específicos para esta actividad, como cañeros (soportes para cañas de pescar), portacañas, compartimientos de almacenamiento de aparejos y espacios para guardar cebos y peces. También áreas de limpieza de pescado a bordo. Asientos acolchados, un techo para proporcionar sombra y compartimentos de almacenamiento adicionales para equipos personales y provisiones.</p>
+                </div>
+            </article>  
+        </section>
+
+        <!-- septima section.contenedor#expertos -->
         <section class="contenedor" id="expertos">
-            <h2 class="subtitulo">Expertos En:</h2>
+            <h2 class="subtitulo">Somos Expertos En:</h2>
             <section class="experts">
                 <div class="cont-expert">
                     <img src="img/negociacion.svg" alt="">
@@ -115,18 +274,23 @@
         <div class="contenedor footer-content">
             <div class="contact-us">
                 <h2 class="brand">Brokers Embarcaciones</h2>
-                <p>mantenimiento, venta y gestoria</p>
+                <p>Alquiler, venta y gestoria</p>
             </div>
+            
             <div class="social-media">
-                <a href="./" class="social-media-icon">
-                    <i class='bx bxl-facebook'></i>
-                </a>
+
                 <a href="./" class="social-media-icon">
                     <i class='bx bxl-instagram'></i>
                 </a>
+
                 <a href="./" class="social-media-icon">
                     <i class='bx bxl-twitter'></i>
                 </a>
+
+                <a href="./" class="social-media-icon">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+
             </div>
         </div>
         <div class="line"></div>
