solo subi mi repositorio

--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
                     <p>Esta embarcación tiene flybridge con sofá y mesa donde puedes tener vistas panorámicas de todo el recorrido; además, en la zona de proa cuenta con asoleadoras donde puedes recostarte y broncearte; asimismo, en la zona de popa cuenta con zona de asientos con mesa; mientras que, en el interior cuenta con linda y espaciosa sala de estar, comedor, 4 habitaciones (2 dobles y 2 twin)  y baño. Adicionalmente, vas a tener la oportunidad de vivir una experiencia única con tus acompañantes.</p>
                 </div>
             </article> 
+        </section>
 
-        <!-- sexta section.cruceros -->
+        <!-- sexta section.lanchas -->
         <section class="contenedor" id="lanchas">
             <h2 class="subtitulo">Lanchas</h2>
             <article class= "contenedor-servicio">
@@ -267,6 +268,27 @@
                 </div>
             </section>
         </section>
+
+        <!-- octaba section -->
+        <seccion class="contenedor" id="ubicacion">
+            <h2 class="subtitulo">Ubicación</h2>
+
+            <div class="contenedor-servicio">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37213.1016316231!2d-58.54865039928719!3d-34.47233449518254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb03cd891437f%3A0xab3b49e671350275!2sSan%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1698451266262!5m2!1ses!2sar" width="600" height="350" style="border:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                <div class="checklist-servicio">
+                    <div class="service">
+                        <h3 class="n-service"><span class="number">*</span>Estamos En:</h3>
+                        <p>Libertador 3501 - San Isidro</p>
+                        <p>Tel: 11-111-2222</p> 
+                        <p>brokers@embarcaciones.com.ar</p>
+                        <p>http://www.brokersembarcaiones.com.ar</p>
+                        <p>WhatApp: +54 911-2222-1111</p>
+                        <img src="img/open-map-isometric.svg" alt="">
+                    </div>
+                </div>       
+            </div-->
+        </section> 
     </main>
 
     <!-- pie de pag, contenedor del pie de pag, contenedor de contactos, h2, p, contenedor de redes sociales -->
@@ -278,22 +300,20 @@
             </div>
             
             <div class="social-media">
-
-                <a href="./" class="social-media-icon">
+                <a href="https://www.instagram.com/" class="social-media-icon" target="_blank">
                     <i class='bx bxl-instagram'></i>
                 </a>
-
-                <a href="./" class="social-media-icon">
+                <a href="https://twitter.com/" class="social-media-icon" target="_blank">
                     <i class='bx bxl-twitter'></i>
                 </a>
-
-                <a href="./" class="social-media-icon">
+                <a href="https://www.facebook.com/" class="social-media-icon" target="_blank">
                     <i class='bx bxl-facebook'></i>
                 </a>
-
             </div>
-        </div>
+        </div->
+
         <div class="line"></div>
+        
     </footer>
   
 <script src="js/menu.js"></script>
