--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <meta charset="UTF-8">
 <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
 <title>TP Pag Web</title>
+<!-- CSS -->
 <link rel="stylesheet" href="css/estilos.css">
+
+<!-- AOS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+
 
 <!-- Fuentes Google Fons -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -274,12 +279,12 @@
             <h2 class="subtitulo">Ubicación</h2>
 
             <div class="contenedor-servicio">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37213.1016316231!2d-58.54865039928719!3d-34.47233449518254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb03cd891437f%3A0xab3b49e671350275!2sSan%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1698451266262!5m2!1ses!2sar" width="600" height="350" style="border:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37213.1016316231!2d-58.54865039928719!3d-34.47233449518254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb03cd891437f%3A0xab3b49e671350275!2sSan%20Isidro%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1698451266262!5m2!1ses!2sar" width="550" height="350" style="border:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
                 <div class="checklist-servicio">
                     <div class="service">
                         <h3 class="n-service"><span class="number">*</span>Estamos En:</h3>
-                        <p>Libertador 3501 - San Isidro</p>
+                        <p>Del Barco Centenera 1122 - San Isidro</p>
                         <p>Tel: 11-111-2222</p> 
                         <p>brokers@embarcaciones.com.ar</p>
                         <p>http://www.brokersembarcaiones.com.ar</p>
@@ -319,6 +324,6 @@
 <script src="js/menu.js"></script>
 <script src="js/lightbox.js"></script>
 <script src="js/main.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 </body>
 </html>
